Added Regama driver
Wico's Af-Tor fully working now
Sped up Video Dens games, found more dip switches, switch test, saving NVRAM
E.F.O. sound board mostly working - a strange issue with IRQ concurrency remains which sometimes causes a sound hangup
Sound support for early LTD system III
More sound found for LTD system 4 (extra lamp data is handled by sound chip port write!)
More solenoids found for LTD's Force & Haunted Hotel
More lamps found for LTD's Space Poker
Increased IRQ for LTD system III, helps with ball detection in outhole
Corrected CPU clock for Peyper / Sonic games, helps speeding up Gamatron game start
Doubled ZC frequency for Joctronic games, saving NVRAM
Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy
Fixed 8085A DSUB instruction for the H register
Fixed a bug in the TMS9995 emulation concerning port data writes
Make color/brightness mappings of Data East 128x16 DMDs match the real hardware
Fix an old regression of Alvin G. solenoids not firing consistently (most notably breaking Mystery Castle)
Improve DMD timings for the Sega 192x64 DMD, matching the real one more closely (also a slight improvement for the DE/Sega/Stern 128x32 ones)
Improve IRQ timings of Sys3/4/6/7/11, DE and the Sega 192x64 DMD-machines
Change switch writing of DE and Sega 192x64 DMD-machines
Improve sound filtering of Flash Gordon, Xenon and all Williams/Bally DCS machines, matching the real one more closely
Improve timings for GTS80 machines, especially for Rack 'em up until Tag-Team (1983-85 era)
Stabilized solenoids 16, 31, and 32 on GamePlan machines
Loosen up 'fast flips' check for Starship Troopers
Slightly improve YM2151 noise

*** SIMULATOR ***
Demolition Man: Added lamp layout, simulated all major shots (except maybe a weak car crash shot), the elevator and cryoclaw mechanism, along with the right ramp diverter that feeds it, and enabled the Buy-In button